--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>JS Game</title>
     <link rel="style.css" type="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="container">
