--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>JS Game</title>
     <link href="style.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="game.js" defer></script>
   </head>
   <body>
     <div class="container">
